--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.15
-	loader_version=0.8.2+build.194
+	minecraft_version=1.16-rc1
+	yarn_mappings=1.16-rc1+build.12
+	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2
 	maven_group = net.rizecookey
 	archives_base_name = combatedit
