--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.47
-	loader_version=0.8.8+build.202
+	minecraft_version=1.16.4
+	yarn_mappings=1.16.4+build.7
+	loader_version=0.10.8
 
 # Mod Properties
-	mod_version = 1.2.1
+	mod_version = 1.3.0
 	maven_group = net.rizecookey
 	archives_base_name = combatedit
