--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -15,8 +15,6 @@ minecraft {
 
 repositories {
 	maven { url = "https://maven.fabricmc.net/" }
-	maven { url = "https://minecraft.curseforge.com/api/maven" }
-	maven { url = 'http://maven.sargunv.s3-website-us-west-2.amazonaws.com/' }
 	mavenCentral()
 }
 
@@ -51,23 +49,12 @@ tasks.withType(JavaCompile) {
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
+	archiveClassifier = "sources"
 	from sourceSets.main.allSource
 }
 
 jar {
 	from "LICENSE"
-}
-
-task fatJar(type: Jar) {
-	baseName = project.name + "-all"
-	from { configurations.compile.collect() { it.isDirectory() ? it : zipTree(it) } }
-	with jar
-}
-
-configure(fatJar) {
-	group = 'build'
-	description = 'Generate jar with dependencies'
 }
 
 // configure the maven publication
