Make attribute modification simpler & compatible with 1.20.6

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ base {
 	archivesName = project.archives_base_name
 }
 
+loom {
+	accessWidenerPath = file("src/main/resources/combatedit.accesswidener")
+}
+
 repositories {
 	maven { url = "https://maven.fabricmc.net/" }
 	mavenCentral()
