Lots of work on GUI configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ loader_version=0.15.11
 mod_version = 1.6.5
 maven_group = net.rizecookey
 archives_base_name = combatedit
+
+cloth_config_version = 14.0.126
+modmenu_version = 10.0.0-beta.1
