--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ loom {
 
 repositories {
 	maven { url = "https://maven.fabricmc.net/" }
+	maven { url = "https://maven.shedaniel.me/" }
+	maven { url = "https://maven.terraformersmc.com/" }
 	mavenCentral()
 }
 
@@ -24,6 +26,9 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+	modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
