--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.11
+yarn_mappings=1.20.6+build.3
+loader_version=0.16.5
 
 # Mod Properties
 mod_version = 2.0.0
 maven_group = net.rizecookey
 archives_base_name = combatedit
 
-cloth_config_version = 14.0.126
-modmenu_version = 10.0.0-beta.1
+# Fabric API
+fabric_version=0.100.8+1.20.6
+
+cloth_config_version = 14.0.139
+modmenu_version = 10.0.0
