--- a/src/main/resources/default_config.json
+++ b/src/main/resources/default_config.json
@@ -1,5 +1,5 @@
 {
-  "settings_version": 1,
+  "configuration_version": 1,
   "entity_attributes": [],
   "item_attributes": [],
   "enabled_sounds": {
