--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,15 @@ base {
 
 loom {
 	accessWidenerPath = file("src/main/resources/combatedit.accesswidener")
+
+	splitEnvironmentSourceSets()
+
+	mods {
+		"combatedit" {
+			sourceSet sourceSets.main
+			sourceSet sourceSets.client
+		}
+	}
 }
 
 repositories {
@@ -35,8 +44,8 @@ dependencies {
 		include modImplementation(fabricApi.module(it, project.fabric_version))
 	}
 
-	include modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
-	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+	include modClientImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
+	modClientImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
