--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
 	Set.of(
 	        "fabric-api-base",
 			"fabric-resource-loader-v0",
-			"fabric-lifecycle-events-v1"
+			"fabric-lifecycle-events-v1",
+			"fabric-command-api-v2"
 	).forEach {
 		include modImplementation(fabricApi.module(it, project.fabric_version))
 	}
