--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.21.2-pre1
+yarn_mappings=1.21.2-pre1+build.1
 loader_version=0.16.5
 
 # Mod Properties
@@ -13,7 +13,7 @@ maven_group = net.rizecookey
 archives_base_name = combatedit
 
 # Fabric API
-fabric_version=0.105.0+1.21.1
+fabric_version=0.105.3+1.21.2
 
-cloth_config_version = 15.0.140
-modmenu_version = 11.0.2
+cloth_config_version = 16.0.131
+modmenu_version = 12.0.0-alpha.1
