--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.21.2-pre3
-yarn_mappings=1.21.2-pre3+build.1
-loader_version=0.16.5
+minecraft_version=1.21.2-pre4
+yarn_mappings=1.21.2-pre4+build.3
+loader_version=0.16.7
 
 # Mod Properties
 mod_version = 2.0.4
@@ -13,7 +13,7 @@ maven_group = net.rizecookey
 archives_base_name = combatedit
 
 # Fabric API
-fabric_version=0.105.3+1.21.2
+fabric_version=0.106.0+1.21.2
 
 cloth_config_version = 16.0.131
-modmenu_version = 12.0.0-alpha.1
+modmenu_version = 12.0.0-beta.1
