--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.21.2-pre4
-yarn_mappings=1.21.2-pre4+build.3
+minecraft_version=1.21.2-rc1
+yarn_mappings=1.21.2-rc1+build.1
 loader_version=0.16.7
 
 # Mod Properties
