--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.21.2-rc1
-yarn_mappings=1.21.2-rc1+build.1
+minecraft_version=1.21.2
+yarn_mappings=1.21.2+build.1
 loader_version=0.16.7
 
 # Mod Properties
@@ -13,7 +13,7 @@ maven_group = net.rizecookey
 archives_base_name = combatedit
 
 # Fabric API
-fabric_version=0.106.0+1.21.2
+fabric_version=0.106.1+1.21.2
 
-cloth_config_version = 16.0.131
+cloth_config_version = 16.0.141
 modmenu_version = 12.0.0-beta.1
